changes made to fix @inludes, and to sort the layout of my dashboard on mobile view

--- a/Static/scss/components/general/general.scss
+++ b/Static/scss/components/general/general.scss
@@ -18,16 +18,20 @@ h1{
 }
 
 .padding1{
-    padding-left: 3%;
-    
-    @include phone {
+    padding-left: 4%;
+    @include mobile {
         padding-left: 1%;
     }
     
     @include tab{
-    padding-left: 5%;
+        padding-left: 5%;
+    }
+    
+    @include computer{
+        padding-left: 3%;
     }
 }
+
 .padding2{
     padding-top: 8%;
 }
@@ -38,9 +42,9 @@ h1{
 }
 
 .padding4{
-    padding-top: 10%;
     
-    @include phone {
+    @include mobile {
+        padding-top: 1%;
         padding-bottom: 2%;
     }
     
@@ -48,10 +52,14 @@ h1{
         padding-top: 0%;
         padding-bottom: 0%;
     }
+    
+    @include computer{
+        padding-top: 1%;
+    }
 }
 
 .refresh{
-  padding-left: 20%;
+  padding-left: 23%;
   width: 150px;
 
  
@@ -64,7 +72,7 @@ h1{
 .select{
     margin-top: 10%;
     
-    @include phone {
+    @include mobile {
         width: 20%;
     }
     @include tab {
@@ -79,7 +87,7 @@ a{
 .mar1{
     margin-top: 2%;
     
-    @include phone{
+    @include mobile{
         margin-top: 6%;
     }
     
@@ -93,7 +101,7 @@ a{
 
 .mar3{
     
-    @include phone{
+    @include mobile{
     margin-left: 4%;
     }
     
@@ -108,7 +116,7 @@ a{
 
 .mar4{
     
-    @include phone{
+    @include mobile{
     margin-left: 2%;
     }
     
@@ -122,7 +130,7 @@ a{
 }
 
 .mar5{
-    @include phone{
+    @include mobile{
         margin-top: 6%;
     }
     
@@ -134,6 +142,12 @@ a{
 .mar6{
     @include tab{
         margin-left: 4%;
+    }
+}
+
+.mar7{
+    @include mobile{
+        margin-left: 6%;
     }
 }
 
